# wnacg-downloader

./: .env.development  .gitignore  Cargo.toml  Dockerfile  build-optimization.sh  bun.lockb  docker-build-and-run.sh  docker-entrypoint.sh  eslint.config.mjs  fetch-and-merge.sh  install-dependencies.sh  modify-files-permissions.sh  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  tmux-run-dev.sh  tsconfig.json  upgrade-dependencies.sh
.cargo/: config.toml
src/: downloader.rs  fetch.ts  index.ts  main.rs  typing.ts  utils.ts
src/classes/: downloader.ts
src/constants/: paths.ts
